--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -7,7 +7,7 @@
     <div class="nav-links">
       <!-- Main navigation links -->
       <a routerLink="/services" class="nav-link" routerLinkActive="active">Browse Services</a>
-      <a routerLink="/how-it-works" class="nav-link" routerLinkActive="active">How It Works</a>
+      <a routerLink="/about" class="nav-link" routerLinkActive="active">How It Works</a>
       <a routerLink="/about" class="nav-link" routerLinkActive="active">About</a>
       
       <!-- Authenticated user links -->
