--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="nav-links">
       <a routerLink="/services" class="nav-link">Browse Services</a>
-      <a routerLink="/how-it-works" class="nav-link">How It Works</a>
+      <a routerLink="/about" class="nav-link">How It Works</a>
       <a routerLink="/about" class="nav-link">About</a>
       <a routerLink="/auth" class="nav-link nav-cta">Get Started</a>
     </div>
