--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,7 +5,7 @@
       <app-logo [size]="32" [showText]="true"></app-logo>
     </div>
     <div class="nav-links">
-      <a routerLink="/services" class="nav-link">Browse Services</a>
+      <a routerLink="/services" class="nav-link">Services</a>
       <a routerLink="/about" class="nav-link">About</a>
       <a routerLink="/auth" class="nav-link nav-cta">Get Started</a>
     </div>
