--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     
     <div class="nav-links">
       <!-- Main navigation links -->
-      <a routerLink="/services" class="nav-link" routerLinkActive="active">Browse Services</a>
+      <a routerLink="/services" class="nav-link" routerLinkActive="active">Services</a>
       <a routerLink="/about" class="nav-link" routerLinkActive="active">About</a>
       
       <!-- Authenticated user links -->
