--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -14,6 +14,12 @@
         <a routerLink="/dashboard" class="nav-link" routerLinkActive="active">Dashboard</a>
         <a routerLink="/profile" class="nav-link" routerLinkActive="active">Profile</a>
         <a routerLink="/transactions" class="nav-link" routerLinkActive="active">Transactions</a>
+        
+        <!-- Admin link (only visible to admin users) -->
+        <a *ngIf="isAdmin" routerLink="/admin" class="nav-link admin-link" routerLinkActive="active">
+          <i class="fas fa-shield-alt"></i>
+          Admin
+        </a>
       </ng-container>
     </div>
 
@@ -23,6 +29,11 @@
       </ng-container>
       
       <ng-container *ngIf="isAuthenticated">
+        <span class="user-info" *ngIf="currentUser">
+          <i class="fas fa-user"></i>
+          {{ currentUser.username }}
+          <span *ngIf="isAdmin" class="admin-badge">ADMIN</span>
+        </span>
         <button class="btn btn-secondary btn-sm" (click)="signOut()">Sign Out</button>
       </ng-container>
     </div>
